@@ -23,9 +23,6 @@
 
 typedef struct LookupPaths {
         char **unit_path;
-#ifdef HAVE_SYSV_COMPAT
-        char **sysvrcnd_path;
-#endif
 } LookupPaths;
 
 typedef enum SystemdRunningAs {
